--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="start_btn"><button>Start Quiz</button></div>
       <!-- Info Box -->
       <div class="info_box">
-          <div class="info-title"><span>Some Rules of this Quiz</span></div>
+          <div class="info-title"><span>Quiz brief</span></div>
           <div class="info-list">
               <div class="info">1. You will have only <span>15 seconds</span> per each question.</div>
               <div class="info">2. Once you select your answer, it can't be undone.</div>
@@ -29,7 +29,7 @@
       <!-- Quiz Box -->
       <div class="quiz_box">
           <header>
-              <div class="title">Awesome Quiz Application</div>
+              <div class="title">Code Quiz</div>
               <div class="timer">
                   <div class="time_left_txt">Time Left</div>
                   <div class="timer_sec">15</div>
@@ -38,18 +38,18 @@
           </header>
           <section>
               <div class="que_text">
-                  <!-- Here I've inserted question from JavaScript -->
+              <!--Questions from JavaScript will be here-->
               </div>
               <div class="option_list">
-                  <!-- Here I've inserted options from JavaScript -->
+                  <!-- options are inserted from JavaScript -->
               </div>
           </section>
-          <!-- footer of Quiz Box -->
+          <!-- This is the footer of the box-->
           <footer>
               <div class="total_que">
-                  <!-- Here I've inserted Question Count Number from JavaScript -->
+                  <!--  Question Count Number from JavaScript -->
               </div>
-              <button class="next_btn">Next Que</button>
+              <button class="next_btn">Next</button>
           </footer>
       </div>
       <!-- Result Box -->
@@ -57,21 +57,21 @@
           <div class="icon">
               <i class="fas fa-crown"></i>
           </div>
-          <div class="complete_text">You've completed the Quiz!</div>
+          <div class="complete_text">Welldone! The Quiz is Over!</div>
           <div class="score_text">
-              <!-- Here I've inserted Score Result from JavaScript -->
+              <!-- We have our results here-->
           </div>
           <div class="buttons">
               <button class="restart">Replay Quiz</button>
               <button class="quit">Quit Quiz</button>
           </div>
       </div>
-      <!-- Inside this JavaScript file I've inserted Questions and Options only -->
+      <!-- Myquestion file is here -->
   </body>
   </html>
   </html>
-  <script src="./assets/js/myquestions.js "></script>
-    <script src="./assets/js/Script.js "></script>
+  <script src="./assets/js/myquestions.js"></script>
+    <script src="./assets/js/Script.js"></script>
  
 </body>
 </html>
