--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets-1/css-1/style.css">
     <title>quiz</title>
   </head>
   <body>
@@ -70,8 +70,8 @@
   </body>
   </html>
   </html>
-  <script src="./assets/js/myquestions.js"></script>
-    <script src="./assets/js/Script.js"></script>
+  <script src="./assets-1/js/myquestion.js"></script>
+    <script src="./assets-1/js/script.js"></script>
  
 </body>
 </html>
